[tool.poetry]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = ["tapiocaboy <kalanamith@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "rp_poetry.main:start"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
ultralyticsplus = "^0.0.29"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"



[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
